--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ logs/
 /frontend/node_modules/
 /conf/webpack-assets.json
 /.vscode/
-/public/user.js
+/public/*.js
 /public/webpack-assets.json
-/public/csr.js
+
