--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,14 @@
     "babel-loader": "^8.0.0-beta.2",
     "typescript": "^2.8.1",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-merge": "^4.1.2"
   },
   "scripts": {
     "type-check": "tsc --noEmit",
-    "bundle": "webpack"
+    "bundle": "webpack --config webpack.production.js",
+    "bundle-dev":"webpack --config webpack.dev.js",
+    "watch": "webpack --config webpack.dev.js -w"
   },
   "dependencies": {
     "@types/react": "^16.3.5",
