--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,5 @@
 play.application.loader=MyApplicationLoader
 play.filters.headers.contentSecurityPolicy="default-src 'self' 'unsafe-inline'"
+webapp.url="https://account.thegulocal.com"
+sessionDomain=".thegulocal.com"
+play.filters.hosts.allowed=["."]
