--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,10 @@
     "@babel/preset-typescript": "^7.0.0-beta.44",
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.2",
+    "dom-testing-library": "^1.3.0",
+    "jest": "^22.4.3",
+    "jest-emotion": "^9.0.0",
+    "react-testing-library": "^2.0.0",
     "typescript": "^2.8.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
@@ -21,7 +25,7 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "bundle": "webpack --config webpack.production.js",
-    "bundle-dev":"webpack --config webpack.dev.js",
+    "bundle-dev": "webpack --config webpack.dev.js",
     "watch": "webpack --config webpack.dev.js -w"
   },
   "dependencies": {
