--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/preset-react": "^7.0.0-beta.44",
     "@babel/preset-typescript": "^7.0.0-beta.44",
+    "@types/jest": "^22.2.2",
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.2",
     "dom-testing-library": "^1.3.0",
     "jest": "^22.4.3",
     "jest-emotion": "^9.0.0",
     "react-testing-library": "^2.0.0",
+    "ts-jest": "^22.4.2",
     "typescript": "^2.8.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
@@ -26,7 +28,8 @@
     "type-check": "tsc --noEmit",
     "bundle": "webpack --config webpack.production.js",
     "bundle-dev": "webpack --config webpack.dev.js",
-    "watch": "webpack --config webpack.dev.js -w"
+    "watch": "webpack --config webpack.dev.js -w",
+    "test": "tsc --noEmit && jest"
   },
   "dependencies": {
     "@types/react": "^16.3.5",
@@ -35,5 +38,5 @@
     "emotion": "^9.1.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
-  }
+  }  
 }
