--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,14 @@
     "dom-testing-library": "^1.3.0",
     "jest": "^22.4.3",
     "jest-emotion": "^9.0.0",
+    "prettier": "1.12.0",
+    "pretty-quick": "^1.4.1",
     "react-testing-library": "^2.0.0",
     "ts-jest": "^22.4.2",
+    "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.10.0",
+    "tslint-immutable": "^4.5.3",
+    "tslint-react": "^3.5.1",
     "typescript": "^2.8.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
@@ -32,14 +38,11 @@
     "test": "tsc --noEmit && jest"
   },
   "dependencies": {
-    "@guardian/guui": "https://github.com/guardian/guui",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
     "babel-plugin-emotion": "^9.1.0",
     "emotion": "^9.1.1",
-    "facepaint": "^1.2.1",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-emotion": "^9.1.1"
+    "react-dom": "^16.3.1"
   }
 }
