--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,13 +40,17 @@
     "test": "tsc --noEmit && jest"
   },
   "dependencies": {
+    "@types/express": "^4.11.1",
+    "@types/node": "^9.6.5",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
     "babel-plugin-emotion": "^9.1.0",
     "emotion": "^9.1.1",
     "emotion-server": "^9.1.1",
+    "express": "^4.16.3",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "license": "UNLICENSED"
 }
