--- a/app/package.json
+++ b/app/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "./dist/server",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.44",
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
-    "@babel/preset-react": "^7.0.0-beta.44",
-    "@babel/preset-typescript": "^7.0.0-beta.44",
+    "@babel/cli": "^7.0.0-beta.46",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/preset-react": "^7.0.0-beta.46",
+    "@babel/preset-typescript": "^7.0.0-beta.46",
+    "@types/bunyan": "^1.8.4",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/helmet": "^0.0.37",
     "@types/jest": "^22.2.2",
+    "@types/node-fetch": "^1.6.9",
+    "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.2",
     "dom-testing-library": "^1.3.0",
@@ -43,14 +48,17 @@
   "dependencies": {
     "@types/express": "^4.11.1",
     "@types/node": "^9.6.5",
-    "@types/react": "^16.3.5",
-    "@types/react-dom": "^16.0.4",
+    "@types/react": "^16.3.13",
+    "@types/react-dom": "^16.0.5",
     "babel-plugin-emotion": "^9.1.0",
+    "babel-regenerator-runtime": "^6.5.0",
+    "bunyan": "^1.8.12",
     "cookie-parser": "^1.4.3",
     "emotion": "^9.1.1",
     "emotion-server": "^9.1.1",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
+    "node-fetch": "^2.1.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "webpack-node-externals": "^1.7.2"
