--- a/app/package.json
+++ b/app/package.json
@@ -61,6 +61,7 @@
     "node-fetch": "^2.1.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-emotion": "^9.1.2",
     "webpack-node-externals": "^1.7.2"
   },
   "license": "UNLICENSED"
