--- a/app/package.json
+++ b/app/package.json
@@ -37,14 +37,14 @@
   },
   "scripts": {
     "start": "nodemon ./dist/server",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit --skipLibCheck",
     "pretty-quick": "pretty-quick",
     "lint": "tslint -p .",
     "bundle": "webpack --config webpack.production.js",
     "bundle-dev": "webpack --config webpack.dev.js",
     "watch":
       "yarn bundle-dev && (yarn start & webpack --config webpack.dev.js -w )",
-    "test": "tsc --noEmit && jest"
+    "test": "tsc --noEmit --skipLibCheck && jest"
   },
   "dependencies": {
     "@types/express": "^4.11.1",
@@ -55,14 +55,14 @@
     "babel-regenerator-runtime": "^6.5.0",
     "bunyan": "^1.8.12",
     "cookie-parser": "^1.4.3",
-    "emotion": "^9.1.1",
+    "emotion": "^9.1.3",
     "emotion-server": "^9.1.1",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "node-fetch": "^2.1.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-emotion": "^9.1.2",
+    "react-emotion": "^9.1.3",
     "webpack-node-externals": "^1.7.2"
   },
   "license": "UNLICENSED"
