--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.2",
     "dom-testing-library": "^1.3.0",
+    "husky": "^0.14.3",
     "jest": "^22.4.3",
     "jest-emotion": "^9.0.0",
     "nodemon": "^1.17.3",
@@ -44,7 +45,8 @@
     "bundle-dev": "webpack --config webpack.dev.js",
     "watch":
       "yarn bundle-dev && (yarn start & webpack --config webpack.dev.js -w )",
-    "test": "tsc --noEmit --skipLibCheck && jest"
+    "test": "yarn lint && yarn type-check && jest",
+    "precommit": "pretty-quick --staged"
   },
   "dependencies": {
     "@types/express": "^4.11.1",
