--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "watch":
       "yarn bundle-dev && (yarn start & webpack --config webpack.dev.js -w )",
     "test": "yarn lint && yarn type-check && jest",
+    "fix": "pretty-quick && tslint --fix -p .",
     "precommit": "pretty-quick --staged"
   },
   "dependencies": {
