--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,9 @@
     "fix": "pretty-quick && tslint --fix -p .",
     "precommit": "pretty-quick --staged"
   },
+  "jest": {
+    "testResultsProcessor": "jest-teamcity-reporter"
+  },
   "dependencies": {
     "@types/express": "^4.11.1",
     "@types/node": "^9.6.5",
