--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "prettier": "1.12.0",
     "pretty-quick": "^1.4.1",
     "react-testing-library": "^2.0.0",
+    "stylis-pxtorem": "^0.0.1",
     "ts-jest": "^22.4.2",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
