--- a/app/package.json
+++ b/app/package.json
@@ -54,8 +54,9 @@
   },
   "cloudformation": false,
   "riffraffFile": "../riff-raff.yaml",
-  "uploadArtefact": false,
+  "uploadArtefact": true,
   "buildDir": "dist",
+  "projectName": "support:account-frontend",
   "dependencies": {
     "@types/express": "^4.11.1",
     "@types/node": "^9.6.5",
