--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -7,9 +7,9 @@ deployments:
     type: cloud-formation
     app: account-frontend
     parameters:
-      templatePath: cloudformation/account-frontend-cf.yaml
+      templatePath: cloud-formation/account-frontend-cf.yaml
   account-frontend:
     type: autoscaling
-    dependencies: [cfn]
+    dependencies: [account-frontend-cloudformation]
     parameters:
       bucket: membership-dist
