corrected untar commands and reverted ports

--- a/cloud-formation/account-frontend-cf.yaml
+++ b/cloud-formation/account-frontend-cf.yaml
@@ -78,15 +78,15 @@ Resources:
           #!/bin/bash -ev
 
           # get and install node
-          wget https://nodejs.org/dist/v9.11.1/node-v9.11.1-linux-x64.tar.xz -P /tmp
-          tar -xf /tmp/node-v9.11.1-linux-x64.tar.xz bin/node --directory /usr/local/bin
+          wget -nv https://nodejs.org/dist/v9.11.1/node-v9.11.1-linux-x64.tar.xz -P /tmp
+          tar -xf /tmp/node-v9.11.1-linux-x64.tar.xz --directory /usr/local/
 
           # get runnable tar from S3
           aws --region ${AWS::Region} s3 cp s3://membership-dist/${Stack}/${Stage}/${App}/account-frontend.tgz /tmp
           mkdir /etc/gu
-          tar -xvzf /tmp/account-frontend.tgz dist --directory /etc/gu/
+          tar -xvzf /tmp/account-frontend.tgz --directory /etc/gu/
 
-          node /etc/gu/server.js
+          /usr/local/node-v9.11.1-linux-x64/bin/node /etc/gu/dist/server.js
 
   AppRole:
     Type: AWS::IAM::Role
@@ -159,13 +159,13 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
       Name: !Sub ${Stack}-${Stage}-${App}
-      Port: 9233
+      Port: 9000
       Protocol: HTTP
       VpcId:
         Ref: VpcId
       HealthCheckIntervalSeconds: 10
       HealthCheckPath: /healthcheck
-      HealthCheckPort: 9233
+      HealthCheckPort: 9000
       HealthCheckProtocol: HTTP
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 2
@@ -187,7 +187,7 @@ Resources:
       SecurityGroupEgress:
         - IpProtocol: tcp
           FromPort: 9000
-          ToPort: 9233
+          ToPort: 9000
           CidrIp: 0.0.0.0/0
 
   InstanceSecurityGroup:
@@ -202,11 +202,11 @@ Resources:
           CidrIp: 77.91.248.0/21
         - IpProtocol: tcp
           FromPort: 9000
-          ToPort: 9233
+          ToPort: 9000
           CidrIp: 77.91.248.0/21
         - IpProtocol: tcp
           FromPort: 9000
-          ToPort: 9233
+          ToPort: 9000
           SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
       SecurityGroupEgress:
         - IpProtocol: tcp
