--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.2",
+    "copy-node-modules": "^1.0.4",
     "dom-testing-library": "^1.3.0",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
@@ -43,7 +44,8 @@
     "type-check": "tsc --noEmit --skipLibCheck",
     "pretty-quick": "pretty-quick",
     "lint": "tslint -p .",
-    "bundle": "webpack --config webpack.production.js",
+    "bundle":
+      "copy-node-modules . ./dist && webpack --config webpack.production.js",
     "bundle-dev": "webpack --config webpack.dev.js",
     "watch":
       "yarn bundle-dev && (yarn start & webpack --config webpack.dev.js -w )",
