corrected healthcheck url for cloud-formation ELB TargetGroup

--- a/cloud-formation/account-frontend-cf.yaml
+++ b/cloud-formation/account-frontend-cf.yaml
@@ -164,7 +164,7 @@ Resources:
       VpcId:
         Ref: VpcId
       HealthCheckIntervalSeconds: 10
-      HealthCheckPath: /healthcheck
+      HealthCheckPath: /_healthcheck
       HealthCheckPort: 9233
       HealthCheckProtocol: HTTP
       HealthCheckTimeoutSeconds: 5
