--- a/cloud-formation/account-frontend-cf.yaml
+++ b/cloud-formation/account-frontend-cf.yaml
@@ -35,7 +35,7 @@ Mappings:
       InstanceType: t2.small
       CertificateARN: arn:aws:acm:eu-west-1:865473395570:certificate/e4c03b58-bf76-44c2-ae6a-17f81c10eb6f
       AwsKeyARN: arn:aws:kms:eu-west-1:865473395570:key/89f17663-c79e-4104-b718-ee0986402ad9
-      DomainEnvVariable: account.code.dev-theguardian.com
+      DomainEnvVariable: code.dev-theguardian.com
     PROD:
       MaxInstances: 6
       MinInstances: 3
@@ -76,24 +76,26 @@ Resources:
       IamInstanceProfile: !Ref InstanceProfile
       AssociatePublicIpAddress: true
       UserData:
-        DomainEnvVariable: !FindInMap [ StageVariables, !Ref Stage, DomainEnvVariable ]
         Fn::Base64: !Sub |
-          #!/bin/bash -ev
+          - |+
+            #!/bin/bash -ev
 
-          # get and install node
-          wget -nv https://nodejs.org/dist/v9.11.1/node-v9.11.1-linux-x64.tar.xz -P /tmp
-          tar -xf /tmp/node-v9.11.1-linux-x64.tar.xz --directory /usr/local/
+            # get and install node
+            wget -nv https://nodejs.org/dist/v9.11.1/node-v9.11.1-linux-x64.tar.xz -P /tmp
+            tar -xf /tmp/node-v9.11.1-linux-x64.tar.xz --directory /usr/local/
 
-          # get runnable tar from S3
-          aws --region ${AWS::Region} s3 cp s3://membership-dist/${Stack}/${Stage}/${App}/account-frontend.tgz /tmp
-          mkdir /etc/gu
-          tar -xvzf /tmp/account-frontend.tgz --directory /etc/gu/
+            # get runnable tar from S3
+            aws --region ${AWS::Region} s3 cp s3://membership-dist/${Stack}/${Stage}/${App}/account-frontend.tgz /tmp
+            mkdir /etc/gu
+            tar -xvzf /tmp/account-frontend.tgz --directory /etc/gu/
 
-          # set DOMAIN environment variable based on StageVariables
-          export DOMAIN=${DomainEnvVariable}
+            # set DOMAIN environment variable based on StageVariables
+            export DOMAIN=${DomainEnvVariable}
 
-          # RUN
-          /usr/local/node-v9.11.1-linux-x64/bin/node /etc/gu/dist/server.js
+            # RUN
+            /usr/local/node-v9.11.1-linux-x64/bin/node /etc/gu/dist/server.js
+
+          - DomainEnvVariable: !FindInMap [ StageVariables, !Ref Stage, DomainEnvVariable ]
 
   AppRole:
     Type: AWS::IAM::Role
