Add raven and refactor conf.

--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^22.2.2",
     "@types/node": "^9.6.5",
     "@types/node-fetch": "^1.6.9",
+    "@types/raven": "^2.5.1",
     "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.2",
@@ -53,7 +54,7 @@
       "yarn bundle-dev && (yarn start & webpack --config webpack.dev.js -w )",
     "test": "yarn lint && yarn type-check && jest --coverage",
     "fix": "pretty-quick && tslint --fix -p .",
-    "precommit": "pretty-quick --staged",
+    "precommit": "pretty-quick --staged && tslint --fix -p .",
     "riffraff": "VERBOSE=true ARTEFACT_PATH=$(pwd) riffraff-artefact"
   },
   "cloudformation": "../cloud-formation/account-frontend-cf.yaml",
@@ -74,6 +75,7 @@
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "node-fetch": "^2.1.2",
+    "raven-js": "^3.25.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-emotion": "^9.1.3",
