Revert "Revert "uncaught exceptions: nevermore""
update server config.

move type deps into devdeps

environments as enums

Move raven into raven block.

node_env use production in build and run

update yarn, remove default export use from config

test raven

update gitignore

Add source map to stacktrace and better include vars from webpack.

--- a/cloud-formation/account-frontend-cf.yaml
+++ b/cloud-formation/account-frontend-cf.yaml
@@ -20,6 +20,12 @@ Parameters:
     Description: Applied directly as a tag
     Type: String
     Default: account-frontend
+  ClientRavenDSN:
+    Description: the DSN to use with sentry on the client
+    Type: String
+  ServerRavenDSN:
+    Description: the DSN to use with sentry on the server
+    Type: String
   AMI:
     Description: AMI ID
     Type: String
@@ -89,6 +95,9 @@ Resources:
 
             # set DOMAIN environment variable based on StageVariables
             export DOMAIN=${DomainEnvVariable}
+            export NODE_ENV=production
+            export CLIENT_DSN=${ClientRavenDSN}
+            export SERVER_DSN=${ServerRavenDSN}
 
             # RUN
             /usr/local/node-v9.11.1-linux-x64/bin/node /etc/gu/dist/server.js
