--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,14 @@
     "@babel/preset-typescript": "^7.0.0-beta.46",
     "@types/bunyan": "^1.8.4",
     "@types/cookie-parser": "^1.4.1",
+    "@types/express": "^4.11.1",
     "@types/helmet": "^0.0.37",
     "@types/jest": "^22.2.2",
     "@types/node": "^9.6.5",
     "@types/node-fetch": "^1.6.9",
+    "@types/raven": "^2.5.1",
+    "@types/react": "^16.3.13",
+    "@types/react-dom": "^16.0.5",
     "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.2",
@@ -52,7 +56,7 @@
       "yarn bundle-dev && (yarn start & webpack --config webpack.dev.js -w )",
     "test": "yarn lint && yarn type-check && jest --coverage",
     "fix": "pretty-quick && tslint --fix -p .",
-    "precommit": "pretty-quick --staged",
+    "precommit": "pretty-quick --staged && tslint --fix -p .",
     "riffraff": "VERBOSE=true ARTEFACT_PATH=$(pwd) riffraff-artefact"
   },
   "cloudformation": "../cloud-formation/account-frontend-cf.yaml",
@@ -61,10 +65,8 @@
   "buildDir": "dist",
   "projectName": "support:account-frontend",
   "dependencies": {
-    "@types/express": "^4.11.1",
-    "@types/react": "^16.3.13",
-    "@types/react-dom": "^16.0.5",
     "babel-plugin-emotion": "^9.1.0",
+    "babel-plugin-source-map-support": "^2.0.1",
     "babel-regenerator-runtime": "^6.5.0",
     "bunyan": "^1.8.12",
     "cookie-parser": "^1.4.3",
@@ -73,9 +75,12 @@
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "node-fetch": "^2.1.2",
+    "raven": "^2.6.2",
+    "raven-js": "^3.25.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-emotion": "^9.1.3",
+    "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.1",
     "webpack-node-externals": "^1.7.2"
   },
