--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^22.2.2",
     "@types/node": "^9.6.5",
     "@types/node-fetch": "^1.6.9",
+    "@types/react-router-dom": "^4.2.6",
     "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.2",
@@ -76,6 +77,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-emotion": "^9.1.3",
+    "react-router-dom": "^4.2.2",
     "stylis-pxtorem": "^0.0.1",
     "webpack-node-externals": "^1.7.2"
   },
