--- a/app/package.json
+++ b/app/package.json
@@ -10,16 +10,22 @@
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0-beta.46",
     "@babel/preset-typescript": "^7.0.0-beta.46",
+    "@types/assets-webpack-plugin": "^3.5.1",
     "@types/bunyan": "^1.8.4",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.11.1",
     "@types/helmet": "^0.0.37",
-    "@types/jest": "^22.2.2",
+    "@types/jest": "^22.2.3",
     "@types/node": "^9.6.5",
     "@types/node-fetch": "^1.6.9",
     "@types/raven": "^2.5.1",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
+    "@types/prettier": "^1.12.3",
+    "@types/react-test-renderer": "^16.0.1",
+    "@types/typescript": "^2.0.0",
+    "@types/webpack": "^4.4.0",
+    "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.2",
@@ -33,7 +39,8 @@
     "nodemon": "^1.17.3",
     "prettier": "1.12.0",
     "pretty-quick": "^1.4.1",
-    "react-testing-library": "^2.0.0",
+    "react-test-renderer": "^16.4.0",
+    "react-testing-library": "^3.1.3",
     "ts-jest": "^22.4.2",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
