--- a/app/package.json
+++ b/app/package.json
@@ -3,52 +3,51 @@
   "version": "1.0.0",
   "main": "./dist/server",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "@babel/preset-react": "^7.0.0-beta.46",
-    "@babel/preset-typescript": "^7.0.0-beta.46",
+    "@babel/cli": "^7.0.0-beta.48",
+    "@babel/core": "^7.0.0-beta.48",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.48",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.48",
+    "@babel/preset-env": "^7.0.0-beta.48",
+    "@babel/preset-react": "^7.0.0-beta.48",
+    "@babel/preset-typescript": "^7.0.0-beta.48",
     "@types/assets-webpack-plugin": "^3.5.1",
     "@types/bunyan": "^1.8.4",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.11.1",
     "@types/helmet": "^0.0.37",
     "@types/jest": "^22.2.3",
-    "@types/node": "^9.6.5",
+    "@types/node": "^10.1.2",
     "@types/node-fetch": "^1.6.9",
     "@types/raven": "^2.5.1",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
-    "@types/prettier": "^1.12.3",
+    "@types/prettier": "^1.12.4",
     "@types/react-test-renderer": "^16.0.1",
-    "@types/typescript": "^2.0.0",
     "@types/webpack": "^4.4.0",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.5.1",
-    "babel-loader": "^8.0.0-beta.2",
+    "babel-loader": "^7.1.4",
     "copy-node-modules": "^1.0.4",
-    "dom-testing-library": "^1.3.0",
+    "dom-testing-library": "^2.3.2",
     "husky": "^0.14.3",
-    "jest": "^22.4.3",
+    "jest": "^23.0.0",
     "jest-emotion": "^9.1.3",
     "jest-teamcity-reporter": "^0.9.0",
     "node-riffraff-artefact": "^2.0.1",
-    "nodemon": "^1.17.3",
-    "prettier": "1.12.0",
-    "pretty-quick": "^1.4.1",
+    "nodemon": "^1.17.5",
+    "prettier": "1.12.1",
+    "pretty-quick": "^1.6.0",
     "react-test-renderer": "^16.4.0",
     "react-testing-library": "^3.1.3",
-    "ts-jest": "^22.4.2",
-    "tslint": "^5.9.1",
-    "tslint-config-prettier": "^1.10.0",
+    "ts-jest": "^22.4.6",
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.13.0",
     "tslint-immutable": "^4.5.3",
-    "tslint-react": "^3.5.1",
+    "tslint-react": "^3.6.0",
     "typescript": "^2.8.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.4",
     "webpack-merge": "^4.1.2"
   },
   "scripts": {
@@ -78,9 +77,9 @@
     "bunyan": "^1.8.12",
     "cookie-parser": "^1.4.3",
     "emotion": "^9.1.3",
-    "emotion-server": "^9.1.1",
+    "emotion-server": "^9.1.3",
     "express": "^4.16.3",
-    "helmet": "^3.12.0",
+    "helmet": "^3.12.1",
     "node-fetch": "^2.1.2",
     "raven": "^2.6.2",
     "raven-js": "^3.25.2",
