--- a/app/package.json
+++ b/app/package.json
@@ -27,7 +27,7 @@
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.5.1",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.0-beta.0",
     "copy-node-modules": "^1.0.4",
     "dom-testing-library": "^2.3.2",
     "husky": "^0.14.3",
