--- a/app/package.json
+++ b/app/package.json
@@ -18,10 +18,10 @@
     "@types/jest": "^22.2.3",
     "@types/node": "^10.1.2",
     "@types/node-fetch": "^1.6.9",
+    "@types/prettier": "^1.12.4",
     "@types/raven": "^2.5.1",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
-    "@types/prettier": "^1.12.4",
     "@types/react-test-renderer": "^16.0.1",
     "@types/webpack": "^4.4.0",
     "@types/webpack-merge": "^4.1.3",
@@ -36,7 +36,7 @@
     "jest-teamcity-reporter": "^0.9.0",
     "node-riffraff-artefact": "^2.0.1",
     "nodemon": "^1.17.5",
-    "prettier": "1.12.1",
+    "prettier": "1.13.2",
     "pretty-quick": "^1.6.0",
     "react-test-renderer": "^16.4.0",
     "react-testing-library": "^3.1.3",
@@ -55,11 +55,9 @@
     "type-check": "tsc --noEmit --skipLibCheck",
     "pretty-quick": "pretty-quick",
     "lint": "tslint -p .",
-    "bundle":
-      "copy-node-modules . ./dist && webpack --config webpack.production.js",
+    "bundle": "copy-node-modules . ./dist && webpack --config webpack.production.js",
     "bundle-dev": "webpack --config webpack.dev.js",
-    "watch":
-      "yarn bundle-dev && (yarn start & webpack --config webpack.dev.js -w )",
+    "watch": "yarn bundle-dev && (yarn start & webpack --config webpack.dev.js -w )",
     "test": "yarn lint && yarn type-check && jest --coverage",
     "fix": "pretty-quick && tslint --fix -p .",
     "precommit": "pretty-quick --staged && tslint --fix -p .",
@@ -87,7 +85,7 @@
     "react-dom": "^16.3.1",
     "react-emotion": "^9.1.3",
     "source-map-support": "^0.5.6",
-    "stylis-pxtorem": "^0.0.1",
+    "stylis-pxtorem": "^0.0.2",
     "webpack-node-externals": "^1.7.2"
   },
   "license": "UNLICENSED"
