--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-typescript": "^7.0.0-beta.48",
     "@types/assets-webpack-plugin": "^3.5.1",
     "@types/bunyan": "^1.8.4",
+    "@types/color": "^3.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.11.1",
     "@types/helmet": "^0.0.37",
@@ -74,6 +75,7 @@
     "babel-plugin-source-map-support": "^2.0.1",
     "babel-regenerator-runtime": "^6.5.0",
     "bunyan": "^1.8.12",
+    "color": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "emotion": "^9.1.3",
     "emotion-server": "^9.1.3",
