credit debug config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   "sourceMaps": true,
   "sourceMapPathOverrides": {
     // if you override this, you MUST provide all defaults again
+    // gist.github.com/jarshwah/389f93f2282a165563990ed60f2b6d6c
     "webpack:///./~/*": "${webRoot}/node_modules/*", // a default
     "webpack:///./*": "${webRoot}/js-src/*", // unsure how/why webpack generates ./links.js
     "webpack:///../*": "${webRoot}/js-src/*", // unsure how/why webpack generates ../links.js
