Check that the SC_GU_U cookie seems reasonable.
fix catch

start making identity more robust

start making identity more robust

--- a/app/package.json
+++ b/app/package.json
@@ -74,7 +74,8 @@
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "@types/universal-cookie": "git+ssh://git@github.com:S64/types-universal-cookie.git#v2.1.2-2"
   },
   "dependencies": {
     "@reach/router": "^1.1.1",
