--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "@types/color": "^3.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.11.1",
+    "@types/google.analytics": "^0.0.39",
     "@types/helmet": "^0.0.37",
     "@types/jest": "^22.2.3",
     "@types/node": "^10.1.2",
@@ -45,6 +46,7 @@
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "@types/react-test-renderer": "^16.0.1",
+    "@types/universal-cookie": "https://github.com/S64/types-universal-cookie",
     "@types/webpack": "^4.4.0",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
@@ -74,7 +76,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "@reach/router": "^1.0.5",
+    "@reach/router": "^1.1.1",
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-source-map-support": "^2.0.1",
     "babel-regenerator-runtime": "^6.5.0",
@@ -93,6 +95,7 @@
     "react-emotion": "^9.1.3",
     "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.2",
+    "universal-cookie": "^2.1.5",
     "webpack-node-externals": "^1.7.2"
   },
   "license": "UNLICENSED"
