--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "@types/node-fetch": "^1.6.9",
     "@types/prettier": "^1.12.4",
     "@types/raven": "^2.5.1",
+    "@types/reach__router": "^1.0.0",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "@types/react-test-renderer": "^16.0.1",
