Better dev reload experience.

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,27 @@
 {
   "name": "account-frontend",
   "version": "1.0.0",
+  "scripts": {
+    "start": "nodemon --inspect ./dist/server",
+    "type-check": "tsc --noEmit --skipLibCheck",
+    "pretty-quick": "pretty-quick",
+    "lint": "tslint -p .",
+    "bundle": "copy-node-modules . ./dist && webpack --config webpack.production.js",
+    "bundle-dev": "yarn bundle-dev-server && yarn bundle-dev-client",
+    "bundle-dev-server": "webpack --config webpack.dev.server.js",
+    "bundle-dev-client": "webpack --config webpack.dev.client.js",
+    "serve-dev": "webpack-dev-server --config ./webpack.dev.client.js --public account.thegulocal.com",
+    "watch": "yarn bundle-dev-server && (yarn start & yarn serve-dev & yarn bundle-dev-server -w)",
+    "test": "yarn lint && yarn type-check && jest --coverage",
+    "fix": "pretty-quick && tslint --fix -p .",
+    "precommit": "pretty-quick --staged && tslint --fix -p .",
+    "riffraff": "VERBOSE=true ARTEFACT_PATH=$(pwd) riffraff-artefact"
+  },
+  "cloudformation": "../cloud-formation/account-frontend-cf.yaml",
+  "riffraffFile": "../riff-raff.yaml",
+  "uploadArtefact": true,
+  "buildDir": "dist",
+  "projectName": "support:account-frontend",
   "main": "./dist/server",
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.48",
@@ -49,26 +70,9 @@
     "typescript": "^2.8.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
-  "scripts": {
-    "start": "nodemon --inspect ./dist/server",
-    "type-check": "tsc --noEmit --skipLibCheck",
-    "pretty-quick": "pretty-quick",
-    "lint": "tslint -p .",
-    "bundle": "copy-node-modules . ./dist && webpack --config webpack.production.js",
-    "bundle-dev": "webpack --config webpack.dev.js",
-    "watch": "yarn bundle-dev && (yarn start & webpack --config webpack.dev.js -w )",
-    "test": "yarn lint && yarn type-check && jest --coverage",
-    "fix": "pretty-quick && tslint --fix -p .",
-    "precommit": "pretty-quick --staged && tslint --fix -p .",
-    "riffraff": "VERBOSE=true ARTEFACT_PATH=$(pwd) riffraff-artefact"
-  },
-  "cloudformation": "../cloud-formation/account-frontend-cf.yaml",
-  "riffraffFile": "../riff-raff.yaml",
-  "uploadArtefact": true,
-  "buildDir": "dist",
-  "projectName": "support:account-frontend",
   "dependencies": {
     "@reach/router": "^1.0.5",
     "babel-plugin-emotion": "^9.1.0",
