--- a/nginx/account-frontend.conf
+++ b/nginx/account-frontend.conf
@@ -2,7 +2,7 @@ server {
     server_name account.thegulocal.com;
 
     location / {
-        proxy_pass http://localhost:9233/;
+        proxy_pass http://localhost:9234/;
         proxy_set_header Host $http_host;
     }
 }
@@ -22,7 +22,10 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://localhost:9233/;
+        proxy_pass http://localhost:9234/;
         proxy_set_header Host $http_host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 }
