--- a/cloud-formation/account-frontend-cf.yaml
+++ b/cloud-formation/account-frontend-cf.yaml
@@ -121,9 +121,14 @@ Resources:
             # RUN
             systemctl enable account-frontend
             systemctl start account-frontend
+            /opt/cloudwatch-logs/configure-logs application ${Stack} ${Stage} ${App} /var/log/account-frontend.log
+            /opt/cloudwatch-logs/configure-logs audit ${Stack} ${Stage} ${App} /var/log/account-frontend-audit.log
+
 
           - DomainEnvVariable: !FindInMap [ StageVariables, !Ref Stage, DomainEnvVariable ]
-
+            Stack: !Ref Stack
+            Stage: !Ref Stage
+            App: !Ref App
   AppRole:
     Type: AWS::IAM::Role
     Properties:
