--- a/app/package.json
+++ b/app/package.json
@@ -81,7 +81,6 @@
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-source-map-support": "^2.0.1",
     "babel-regenerator-runtime": "^6.5.0",
-    "bunyan": "^1.8.12",
     "color": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "emotion": "^9.1.3",
@@ -97,7 +96,8 @@
     "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.2",
     "universal-cookie": "^2.1.5",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "winston": "^3.0.0"
   },
   "license": "UNLICENSED"
 }
