--- a/app/package.json
+++ b/app/package.json
@@ -47,7 +47,6 @@
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "@types/react-test-renderer": "^16.0.1",
-    "@types/universal-cookie": "https://github.com/S64/types-universal-cookie",
     "@types/webpack": "^4.4.0",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
@@ -74,11 +73,11 @@
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2",
-    "@types/universal-cookie": "git+ssh://git@github.com:S64/types-universal-cookie.git#v2.1.2-2"
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "@reach/router": "^1.1.1",
+    "@types/base-64": "^0.1.2",
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-source-map-support": "^2.0.1",
     "babel-regenerator-runtime": "^6.5.0",
@@ -86,6 +85,7 @@
     "cookie-parser": "^1.4.3",
     "emotion": "^9.1.3",
     "emotion-server": "^9.1.3",
+    "es-cookie": "^1.2.0",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
     "node-fetch": "^2.1.2",
