--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
     "bundle-dev-client": "webpack --config webpack.dev.client.js",
     "serve-dev": "webpack-dev-server --config ./webpack.dev.client.js --public account.thegulocal.com",
     "watch": "yarn bundle-dev-server && (yarn bundle-dev-server -w & yarn start & yarn serve-dev)",
-    "test": "yarn lint && yarn type-check && jest --coverage",
+    "test": "jest --coverage && yarn type-check && yarn lint ",
     "fix": "pretty-quick && tslint --fix -p .",
     "precommit": "pretty-quick --staged && tslint --fix -p .",
     "riffraff": "VERBOSE=true ARTEFACT_PATH=$(pwd) riffraff-artefact"
@@ -81,6 +81,7 @@
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-source-map-support": "^2.0.1",
     "babel-regenerator-runtime": "^6.5.0",
+    "base-64": "^0.1.0",
     "color": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "emotion": "^9.1.3",
@@ -88,6 +89,7 @@
     "es-cookie": "^1.2.0",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
+    "moment": "^2.22.2",
     "node-fetch": "^2.1.2",
     "raven": "^2.6.2",
     "raven-js": "^3.25.2",
