--- a/app/package.json
+++ b/app/package.json
@@ -93,8 +93,8 @@
     "node-fetch": "^2.1.2",
     "raven": "^2.6.2",
     "raven-js": "^3.25.2",
-    "react": "16.4",
-    "react-dom": "16.4",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-emotion": "^9.1.3",
     "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.2",
