nginx and readme

--- a/nginx/manage-frontend.conf
+++ b/nginx/manage-frontend.conf
@@ -1,5 +1,5 @@
 server {
-    server_name account.thegulocal.com;
+    server_name manage.thegulocal.com;
 
     location / {
         proxy_pass http://localhost:9234/;
@@ -9,7 +9,7 @@ server {
 
 server {
     listen 443;
-    server_name account.thegulocal.com;
+    server_name manage.thegulocal.com;
 
     ssl on;
     ssl_certificate wildcard-thegulocal-com-exp2019-01-09.crt; ## Supplied by https://github.com/guardian/identity-platform#setup-nginx-for-local-development
