update node version and make more explicit in dev

--- a/app/.babelrc
+++ b/app/.babelrc
@@ -28,7 +28,7 @@
           "@babel/env",
           {
             "targets": {
-              "node": "current"
+              "node": "10.7.0"
             }
           }
         ],
