Revert "don't copy node-modules across to dist"

--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
     "type-check": "tsc --noEmit --skipLibCheck",
     "pretty-quick": "pretty-quick",
     "lint": "tslint -p .",
-    "bundle": "webpack --config webpack.production.js",
+    "bundle": "copy-node-modules . ./dist && webpack --config webpack.production.js",
     "bundle-dev": "yarn bundle-dev-server && yarn bundle-dev-client",
     "bundle-dev-server": "webpack --config webpack.dev.server.js",
     "bundle-dev-client": "webpack --config webpack.dev.client.js",
@@ -52,6 +52,7 @@
     "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.5.1",
     "babel-loader": "^8.0.0-beta.0",
+    "copy-node-modules": "^1.0.4",
     "dom-testing-library": "^2.3.2",
     "husky": "^0.14.3",
     "jest": "^23.0.0",
