--- a/app/package.json
+++ b/app/package.json
@@ -76,12 +76,11 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.55",
     "@reach/router": "^1.1.1",
     "@types/base-64": "^0.1.2",
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-source-map-support": "^2.0.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-regenerator-runtime": "^6.5.0",
     "base-64": "^0.1.0",
     "color": "^3.0.0",
     "emotion": "^9.1.3",
