--- a/app/package.json
+++ b/app/package.json
@@ -98,6 +98,7 @@
     "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.2",
     "webpack-node-externals": "^1.7.2",
+    "whatwg-fetch": "^2.0.4",
     "winston": "^3.0.0"
   },
   "license": "UNLICENSED"
