update babel and webpack now it's almost stable

--- a/app/package.json
+++ b/app/package.json
@@ -25,12 +25,12 @@
   "projectName": "support:manage-frontend",
   "main": "./dist/server",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "@babel/preset-react": "^7.0.0-beta.51",
-    "@babel/preset-typescript": "^7.0.0-beta.51",
+    "@babel/cli": "^7.0.0-rc.1",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/preset-react": "^7.0.0-rc.1",
+    "@babel/preset-typescript": "^7.0.0-rc.1",
     "@types/assets-webpack-plugin": "^3.5.1",
     "@types/bunyan": "^1.8.4",
     "@types/color": "^3.0.0",
@@ -47,11 +47,11 @@
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "@types/react-test-renderer": "^16.0.1",
-    "@types/webpack": "^4.4.0",
+    "@types/webpack": "^4.4.9",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
-    "assets-webpack-plugin": "^3.5.1",
-    "babel-loader": "^8.0.0-beta.0",
+    "assets-webpack-plugin": "^3.9.5",
+    "babel-loader": "^8.0.0-beta.4",
     "copy-node-modules": "^1.0.4",
     "copy-webpack-plugin": "^4.5.2",
     "dom-testing-library": "^2.3.2",
@@ -71,13 +71,13 @@
     "tslint-immutable": "^4.5.3",
     "tslint-react": "^3.6.0",
     "typescript": "^2.8.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.55",
+    "@babel/polyfill": "^7.0.0-rc.1",
     "@reach/router": "^1.1.1",
     "@types/base-64": "^0.1.2",
     "babel-plugin-emotion": "^9.1.0",
