--- a/app/package.json
+++ b/app/package.json
@@ -90,6 +90,7 @@
     "@babel/polyfill": "^7.0.0",
     "@reach/router": "^1.1.1",
     "@types/base-64": "^0.1.2",
+    "@types/react-stripe-elements": "^1.1.7",
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-source-map-support": "^2.0.1",
     "base-64": "^0.1.0",
@@ -107,6 +108,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-emotion": "^9.1.3",
+    "react-stripe-elements": "^2.0.1",
     "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.2",
     "webpack-node-externals": "^1.7.2",
