--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,16 @@
   "buildDir": "dist",
   "projectName": "support:manage-frontend",
   "main": "./dist/server",
+  "browserslist": [
+    ">0.25%",
+    "chrome >= 49",
+    "firefox >= 46",
+    "ie >= 11",
+    "edge >= 13",
+    "safari >= 8",
+    "opera >= 27",
+    "iOS >= 9"
+  ],
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
     "@babel/core": "^7.0.0-rc.1",
@@ -83,6 +93,7 @@
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-source-map-support": "^2.0.1",
     "base-64": "^0.1.0",
+    "browserslist-useragent": "^2.0.1",
     "color": "^3.0.0",
     "emotion": "^9.1.3",
     "emotion-server": "^9.1.3",
