improve wording on banner

--- a/app/package.json
+++ b/app/package.json
@@ -32,7 +32,8 @@
     "edge >= 13",
     "safari >= 8",
     "opera >= 27",
-    "iOS >= 9"
+    "iOS >= 9",
+    "not chrome 68"
   ],
   "devDependencies": {
     "@babel/cli": "^7.0.0",
