--- a/cfn.yaml
+++ b/cfn.yaml
@@ -104,7 +104,7 @@ Resources:
             # write out systemd file
             cat >/etc/systemd/system/manage-frontend.service <<EOL
             [Service]
-            ExecStart=node /etc/gu/dist/server.js
+            ExecStart=/usr/bin/node /etc/gu/dist/server.js
             Restart=always
             StandardOutput=syslog
             StandardError=syslog
