--- a/app/package.json
+++ b/app/package.json
@@ -107,6 +107,7 @@
     "helmet": "^3.12.1",
     "moment": "^2.22.2",
     "node-fetch": "^2.1.2",
+    "ophan-tracker-js": "^1.3.13",
     "raven": "^2.6.2",
     "raven-js": "^3.25.2",
     "react": "^16.4.1",
