--- a/app/package.json
+++ b/app/package.json
@@ -116,6 +116,7 @@
     "react-stripe-elements": "^2.0.1",
     "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.2",
+    "ts-optchain": "^0.1.2",
     "webpack-node-externals": "^1.7.2",
     "whatwg-fetch": "^2.0.4",
     "winston": "^3.0.0"
