--- a/cfn.yaml
+++ b/cfn.yaml
@@ -43,6 +43,7 @@ Mappings:
       MinInstances: 1
       InstanceType: t2.small
       CertificateARN: arn:aws:acm:eu-west-1:865473395570:certificate/2c2a72a2-a0d6-4ffa-b8a1-8a7916000515
+      ApiDomainEnvVariable: code.dev-guardianapis.com
       DomainEnvVariable: code.dev-theguardian.com
       SFCasesUrl: https://gm3ysthjh6.execute-api.eu-west-1.amazonaws.com/CODE
     PROD:
@@ -50,6 +51,7 @@ Mappings:
       MinInstances: 3
       InstanceType: t2.small
       CertificateARN: arn:aws:acm:eu-west-1:865473395570:certificate/d2e4911c-c78d-469b-ab53-8c507aa41576
+      ApiDomainEnvVariable: guardianapis.com
       DomainEnvVariable: theguardian.com
       SFCasesUrl: https://lmjfwuvr5l.execute-api.eu-west-1.amazonaws.com/PROD
 Resources:
@@ -113,6 +115,7 @@ Resources:
             Group=manage-frontend
             Environment=NODE_ENV=production
             Environment=DOMAIN=${DomainEnvVariable}
+            Environment=API_DOMAIN=${ApiDomainEnvVariable}
             Environment=SF_CASES_URL=${SFCasesUrl}
             Environment=CLIENT_DSN=${ClientRavenDSN}
             Environment=SERVER_DSN=${ServerRavenDSN}
@@ -125,6 +128,7 @@ Resources:
             /opt/cloudwatch-logs/configure-logs application ${Stack} ${Stage} ${App} /var/log/manage-frontend.log
 
           - DomainEnvVariable: !FindInMap [ StageVariables, !Ref Stage, DomainEnvVariable ]
+            ApiDomainEnvVariable: !FindInMap [ StageVariables, !Ref Stage, ApiDomainEnvVariable ]
             SFCasesUrl: !FindInMap [ StageVariables, !Ref Stage, SFCasesUrl ]
 
   AppRole:
